<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="page_title">My Nanodegree Apps</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="super_duo">Super Duo</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_app_material">Make Your App Material</string>
    <string name="go_ubiqiutous">Go Ubiquitous</string>
    <string name="capstone">Capstone-My Own App!</string>
    <string name="toast_placeholder_general">This button will launch my\u0020</string>
    <string name="toast_placeholder_movies_app">Popular Movies App</string>
    <string name="toast_placeholder_super_duo_app">Supper Duo App</string>
    <string name="toast_placeholder_build_it_bigger_app">Build it Bigger App</string>
    <string name="toast_placeholder_make_app_material_app">Make My App Material App</string>
    <string name="toast_placeholder_go_ubiquitous_app">Go Ubiquitous App</string>
    <string name="toast_placeholder_capstone_app">Capstone App</string>
</resources>
