
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="top|center"

    tools:context=".MyPortfolioMainActivity">

    <TextView
        android:layout_height="@dimen/android_title_height"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/android_textview_margin_top"
        android:layout_marginBottom="@dimen/android_textview_margin_bottom"
        android:textSize="@dimen/android_textview_size"
        android:text="@string/page_title"
        />


    <Button
        android:id="@+id/popular_movies"
        android:layout_width="@dimen/android_button_width"
        android:layout_height="@dimen/android_button_height"
        android:textColor="@drawable/android_button_text_color"
        android:background="@drawable/android_button_background_color"
        android:layout_marginBottom="@dimen/android_button_margin_bottom"
        android:text="@string/popular_movies"
        android:onClick="popularMoviesAction"


       />

    <Button
        android:id="@+id/super_duo"
        android:layout_width="@dimen/android_button_width"
        android:layout_height="@dimen/android_button_height"
        android:textColor="@drawable/android_button_text_color"
        android:background="@drawable/android_button_background_color"
        android:layout_marginBottom="@dimen/android_button_margin_bottom"
        android:text="@string/super_duo"
        android:onClick="superDuoAction"

        />
    <Button
        android:id="@+id/build_it_bigger"
        android:layout_width="@dimen/android_button_width"
        android:layout_height="@dimen/android_button_height"
        android:textColor="@drawable/android_button_text_color"
        android:background="@drawable/android_button_background_color"
        android:layout_marginBottom="@dimen/android_button_margin_bottom"
        android:text="@string/build_it_bigger"
        android:onClick="buildItBiggerAction"

        />
    <Button
        android:id="@+id/make_app_material"
        android:layout_width="@dimen/android_button_width"
        android:layout_height="@dimen/android_button_height"
        android:textColor="@drawable/android_button_text_color"
        android:background="@drawable/android_button_background_color"
        android:layout_marginBottom="@dimen/android_button_margin_bottom"
        android:text="@string/make_app_material"
        android:onClick="makeAppMaterialAction"

        />
    <Button
        android:id="@+id/go_ubiquitous"
        android:layout_width="@dimen/android_button_width"
        android:layout_height="@dimen/android_button_height"
        android:textColor="@drawable/android_button_text_color"
        android:background="@drawable/android_button_background_color"
        android:layout_marginBottom="@dimen/android_button_margin_bottom"
        android:text="@string/go_ubiqiutous"
        android:onClick="goUbiquitousAction"



        />
    <Button
        android:id="@+id/capstone"
        android:layout_width="@dimen/android_button_width"
        android:layout_height="@dimen/android_button_height"
        android:textColor="@drawable/android_button_text_color"
        android:background="@drawable/android_button_background_color"
        android:layout_marginBottom="@dimen/android_button_margin_bottom"
        android:text="@string/capstone"
        android:onClick="capstoneAction"


        />

</LinearLayout>
</ScrollView>
